bk_ida/gccida/c0/rtx_equal_for_field_assignment_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_field_assignment_p/src/combine.c:8017:33: error: use of undeclared identifier 'machine_mode'
v2 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), x); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_field_assignment_p/src/combine.c:8017:48: error: expected expression
v2 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), x); 
                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_field_assignment_p/src/combine.c:8027:33: error: use of undeclared identifier 'machine_mode'
v3 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v5), y); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_field_assignment_p/src/combine.c:8027:48: error: expected expression
v3 = gen_lowpart_for_combine( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v5), y); 
                                               ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/rtx_equal_for_field_assignment_p/src/obj/combine.o] Error 1
